<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        >

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textOff="OFF"
            android:textOn="ON"/>

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/toggleButton1"
            android:textOff="OFF"
            android:textOn="ON"/>
    </RelativeLayout>


    <Button
    android:id="@+id/tbbutton1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/TBButton1"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TBTV1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tbbutton1"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TBTV2"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@id/textView1"
        android:layout_below="@id/tbbutton1"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_toRightOf="@id/textView2"
        android:layout_below="@id/textView1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="3dp"/>
</RelativeLayout>